# sourcea-boot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-check-pypi-v1.yml  publish-pypi-v1.yml  validate-sourcea-boot-v1.yml
docs/: PYPI_TRUSTED_PUBLISHING_SETUP.md
scripts/: validate-sourcea-boot-v1.sh
src/sourcea_boot/: __init__.py  checks.py  cli.py  runner.py
