[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcea-boot"
version = "0.1.0"
description = "PASS or BLOCK before any agent executes — four disk checks, one receipt."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SourceA", email = "hello@sourcea.app" }]
keywords = ["agents", "governance", "boot-gate", "llm", "cursor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://sourcea.app/eval"
Repository = "https://github.com/kazemnezhadsina144-dot/sourcea-boot"

[project.scripts]
sourcea-boot = "sourcea_boot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
